# hello-world

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
sql/: insert.sql  tables.sql
