[project]
name = "hello-world"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Martins",email = "139396742+Rafamsa@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipdb (>=0.13.13,<0.14.0)"
]
